add reverse string

--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
       <div id="result">
         <p>The factorial is: <span class="number"></span> </p>
       </div>
+
+      <h1>Palindrome</h1>
+
+      <form id="palindrome">
+        <div class="form-group">
+          <label for="word">Enter a word to find out if it is a palindrome:</label>
+          <input id="word" type="text">
+        </div>
+
+        <button type="submit" class="btn btn-default">Is it a palindrome?</button>
+      </form>
+
+      <div id="result-palindrome">
+        <p>The factorial is: <span class="word"></span> </p>
+      </div>
     </div>
   </body>
 </html>
