add palindrome case with for loop solution

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 
       <form id="palindrome">
         <div class="form-group">
-          <label for="word">Enter a word to find out if it is a palindrome:</label>
-          <input id="word" type="text">
+          <label for="string">Enter a word to find out if it is a palindrome:</label>
+          <input id="string" type="text">
         </div>
 
         <button type="submit" class="btn btn-default">Is it a palindrome?</button>
       </form>
 
       <div id="result-palindrome">
-        <p>The factorial is: <span class="word"></span> </p>
+        <p>This is a palindrome: <span class="string"></span> </p>
       </div>
     </div>
   </body>
