add prime sifting function

--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
       <div id="result-palindrome">
         <p>This is a palindrome: <span class="string"></span> </p>
       </div>
+
+      <h1>Prime Sifting</h1>
+
+      <form id="prime-number">
+        <div class="form-group">
+          <label for="input-number">Enter a number to find out all its previous prime numbers:</label>
+          <input id="input-number" type="number">
+        </div>
+
+        <button type="submit" class="btn btn-default">Find preceding prime numbers</button>
+      </form>
+
+      <div id="result-prime">
+        <p>Preceding prime numbers are: <span class="prime-numbers"></span> </p>
+      </div>
     </div>
   </body>
 </html>
